# pinsocial

./: .env.dev  .pyproject.toml.swp  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
config/pinsocialnet/: asgi.py  settings.py
pinsocialnet/: manage.py
pinsocialnet/config/: settings.py  urls.py  wsgi.py
pinsocialnet/pinsocialnet/: asgi.py  settings.py  urls.py  wsgi.py
pinsocialnet/src/profiles/: models.py
