[tool.poetry]
name = "pinsocial"
version = "0.1.0"
description = "Social network"
authors = ["Klimov Andrey"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1.1"
djangorestframework = "^3.11.1"
pillow = "^7.2.0"
psycopg2-binary = "^2.8.5"
git-clone = "^1.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
